DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AnswerOption</label>
    <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
    <relationshipLabel>SurveyResponses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>