DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__BooleanResponse__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__BooleanResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BooleanResponse</label>
    <type>Checkbox</type>
</CustomField>