DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__DateTimeResponse__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__DateTimeResponse__c</fullName>
    <label>DateTimeResponse</label>
    <type>DateTime</type>
</CustomField>