DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__NumberResponse__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NumberResponse__c</fullName>
    <label>NumberResponse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>