DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__Recipient__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>TIMBASURVEYS__Recipient__c</referenceTo>
    <relationshipLabel>SurveyResponses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>