DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__StringResponse__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__StringResponse__c</fullName>
    <label>StringResponse</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>