DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/fields/TIMBASURVEYS__Survey_Not_Finish__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Survey_Not_Finish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Not Finish</label>
    <type>Checkbox</type>
</CustomField>