DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyResponse__c/listViews/TIMBASURVEYS__All.listView-meta.xml
<ListView>
    <fullName>TIMBASURVEYS__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>TIMBASURVEYS__DateTimeResponse__c</columns>
    <columns>TIMBASURVEYS__StringResponse__c</columns>
    <columns>TIMBASURVEYS__Recipient__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>